--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
         <link rel="stylesheet" type="text/css" href="./css/spliceboard.css" />
     </head>
     <body>
-        <form method="POST" action="http://www.zhengxiang4056.club/spliceboard-online/php/spliceboard.php">
+        <form method="POST" action="https://www.qixqi.cn/copy/php/spliceboard.php">
             <div id="sBody">
                 <textarea name="spliceboard" rows="23" cols="150">在此粘贴 ...</textarea><br />
                 <input type="submit" id="subscribe" name="subscribe" value="提交" /><br />
-                <a href="http://www.zhengxiang4056.club/spliceboard-online/php/show_spliceboard.php"><label>已剪接，查看列表</label></a>
+                <a href="https://www.qixqi.cn/copy/php/show_spliceboard.php"><label>已剪接，查看列表</label></a>
             </div>
         </form>
     </body>
