--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             <div id="sBody">
                 <textarea name="spliceboard" rows="23" cols="150">在此粘贴 ...</textarea><br />
                 <input type="submit" id="subscribe" name="subscribe" value="提交" /><br />
-                <a href="https://www.qixqi.cn/copy/php/show_spliceboard.php"><label>已剪接，查看列表</label></a>
+                <a href="php/show_spliceboard.php"><label>已剪接，查看列表</label></a>
             </div>
         </form>
     </body>
