--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="zh">
     <head>
-        <meta http-equiv="Content-Type" content="text/javascript" charset="utf8" />
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <title>在线剪贴板</title>
-        <link rel="stylesheet" type="text/css" href="./css/spliceboard.css" />
+        <link rel="stylesheet" type="text/css" href="css/spliceboard.css" />
     </head>
     <body>
-        <form method="POST" action="https://www.qixqi.cn/copy/php/spliceboard.php">
+        <form method="post" action="/copy/php/spliceboard.php">
             <div id="sBody">
                 <textarea name="spliceboard" rows="23" cols="150">在此粘贴 ...</textarea><br />
                 <input type="submit" id="subscribe" name="subscribe" value="提交" /><br />
@@ -14,5 +14,5 @@
             </div>
         </form>
     </body>
-    <script type="text/javascript" src="./javascript/spliceboard.js"></script>
+    <script type="text/javascript" src="js/spliceboard.js"></script>
 </html>
